--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -66,7 +66,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textCryptCurrency"
+            android:id="@+id/textCryptoCurrency"
             android:text="@string/bitcoin"
             android:textSize="15sp"
             android:paddingStart="20dp"
