--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -6,13 +6,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    app:cardElevation="20dp"
+    app:cardElevation="10dp"
     app:cardCornerRadius="5dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp">
+    android:layout_margin="10dp">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
