--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,15 @@
     tools:context="com.regent.tech.bitcoin_converter.MainActivity">
 
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
     <include layout="@layout/content_main"/>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
