--- a/app/src/main/res/layout/conversion_dialog_box.xml
+++ b/app/src/main/res/layout/conversion_dialog_box.xml
@@ -18,7 +18,7 @@
             android:textSize="15sp"
             android:gravity="end"
             android:text="@string/btc"
-            android:id="@+id/convertFrom"
+            android:id="@+id/convert_from"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"/>
         <TextView
@@ -39,7 +39,7 @@
             android:textSize="15sp"
             android:text="@string/ngn"
             android:gravity="start"
-            android:id="@+id/convertTo"
+            android:id="@+id/convert_to"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"/>
     </LinearLayout>
@@ -53,6 +53,15 @@
         android:gravity="center"
         android:layout_marginTop="10dp"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/conversion_box"
+        android:hint="@string/enter_rate_to_convert"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:inputType="number"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,13 +72,4 @@
         android:textColor="@android:color/black"
         android:gravity="center"
         android:layout_marginTop="10dp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/conversion_box"
-        android:hint="@string/enter_rate_to_convert"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:inputType="number"/>
 </LinearLayout>
